--- a/app.json
+++ b/app.json
@@ -1,10 +1,13 @@
 {
     "pages":[
+       
              "pages/index/index",
              "pages/course/index",
              "pages/msg/index",
              "pages/me/index",
-             "pages/logs/logs"
+             "pages/logs/logs",                    
+             "pages/index/teachers/index",
+             "pages/me/personalPage/index"
              ],
     "window":{
         "backgroundTextStyle":"light",
