我的老师主页
新增我的老师主页详细

--- a/app.json
+++ b/app.json
@@ -1,24 +1,34 @@
 {
     "pages":[
        
-            "pages/login/index",
+       
+             "pages/login/index",
              "pages/login/regist/index",
-        "pages/login/forgetPwd/index",
-            
+             "pages/login/forgetPwd/index",
              "pages/index/index",
              "pages/course/index",
-             "pages/msg/index",
              "pages/me/index",
              "pages/index/teachers/index",
-             "pages/me/personalPage/index"
+             "pages/me/personalPage/index",
+             "pages/me/myOrder/index",
+             "pages/me/myTeacher/index",
+             "pages/me/myCollect/index",
+             "pages/me/myWallet/index",
+              "pages/me/aboutXF/index",
+              "pages/me/mySet/index",
+              "pages/me/mySet/modifyPwd/index",
+              "pages/me/mySet/sayOpinion/index",
+              "pages/index/teachers/teacherPage/index"
+              
+  
              ],
     "window":{
         "backgroundTextStyle":"light",
         "navigationBarTextStyle": "white",
         "navigationBarTitleText": "学富网",
-        "navigationBarBackgroundColor": "red",
-        "backgroundColor": "#fbf9fe",
+        "navigationBarBackgroundColor": "#FF0000",
         "enablePullDownRefresh":true
+
     },
     "tabBar": {
         "color": "gray",
